Fixes card overflow
TODO: aspect-ration: 1/1 overflowing

--- a/src/components/links/CardLink.scss
+++ b/src/components/links/CardLink.scss
@@ -9,8 +9,6 @@
   font-size: theme("fontSize.lg");
   border: 2px solid currentColor;
 
-  aspect-ratio: 1 / 1;
-
   &:hover {
     color: theme("colors.zinc.900");
     background: theme("colors.zinc.300") !important;
